- Styling: fixed chevron on select fields for dark mode, v2.

--- a/RockWeb/Themes/RockNextGen/Styles/theme.css
+++ b/RockWeb/Themes/RockNextGen/Styles/theme.css
@@ -5454,6 +5454,7 @@ select.form-control {
   background-size: var(--spacing-medium) 12px;
   border-radius: var(--rounded-xsmall);
   appearance: none;
+  cursor: pointer;
 }
 select.form-control[multiple], select.form-control[size]:not([size="1"]) {
   padding-right: var(--spacing-medium);
@@ -5464,6 +5465,18 @@ select.form-control:-moz-focusring {
   text-shadow: 0 0 0 var(--color-interface-strong);
 }
 select.form-control:focus::-ms-value {
+  color: var(--color-interface-stronger);
+  background-color: var(--color-interface-softest);
+}
+
+[theme=dark] select.form-control {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23D9D9E3' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
+}
+[theme=dark] select.form-control:-moz-focusring {
+  color: transparent;
+  text-shadow: 0 0 0 var(--color-interface-strong);
+}
+[theme=dark] select.form-control:focus::-ms-value {
   color: var(--color-interface-stronger);
   background-color: var(--color-interface-softest);
 }
